--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,12 @@
 <html lang="en">
   <head>
     <link rel="manifest" href="/manifest.json">
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+
+    <!-- Because Apple is bad and does not properly support PWA (2020-08) we gave to do this for icons. -->
+    <link rel="apple-touch-icon" href="apple-touch-icon.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="167x167" href="apple-icon-180x180.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-icon-180x180.png">
 
     <meta charset="UTF-8">
     <meta name="description" content="Buy, Sell, Promote and Watch Local Video Classifieds.">
