--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -181,39 +181,37 @@ youtube,
 
     <nav class="navbar navbar-default navbar-fixed-bottom">
       <div class="container">
-        <div class="collapse navbar-collapse" id="myNavbar">
-          <div class="row1">
-            <ul class="nav navbar-nav">
-              <li class="dropup">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="ts-label">About Us <i class="fa fa-sort"></i></span></a>
-                <ul class="dropdown-menu dropup dropup-menu" role="menu" aria-labelledby="dLabel">
-                  <li><%= link_to 'Career With Us', career_path %></a></li>
-                  <li><%= link_to 'About Us', about_path %></li>
-                  <li><%= link_to 'Newsletter', newsletter_path %></li>
-                  <li><%= link_to 'How It Works', '/howitworks/index' %></li>
-                  <li><%= link_to 'Prices', '/prices/index' %></li>
-                </ul>
-              </li>
-              <li class="dropup">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="ts-label">Legal <i class="fa fa-sort"></i></span></a>
-                <ul class="dropdown-menu dropup dropup-menu" role="menu" aria-labelledby="dLabel">
-                  <li><%= link_to 'Terms of Service', terms_path %></li>
-                  <li><%= link_to 'Privacy Policy', privacy_path %></li>
-                  <li><%= link_to 'Posting Terms of Use', postterm_path %></li>
-                </ul>
-              </li>
-              <li class="dropup">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="ts-label">Help <i class="fa fa-sort"></i></span></a>
-                <ul class="dropdown-menu dropup dropup-menu" role="menu" aria-labelledby="dLabel">
-                  <li><%= link_to 'FAQs', faq_path %></li>
-                  <li><%= link_to 'Safety Tips', safetytips_path %></li>
-                </ul>
-              </li>
-              <li class="li_no_bg">
-                <span class="ts-copy">© Connechub <%= Date.today.year %></span>
-              </li>
-            </ul>
-          </div>
+        <div class="navbar-collapse" id="myNavbar">
+          <ul class="nav navbar-nav">
+            <li class="dropup">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="ts-label">About Us <i class="fa fa-sort"></i></span></a>
+              <ul class="dropdown-menu dropup dropup-menu" role="menu" aria-labelledby="dLabel">
+                <li><%= link_to 'Career With Us', career_path %></a></li>
+                <li><%= link_to 'About Us', about_path %></li>
+                <li><%= link_to 'Newsletter', newsletter_path %></li>
+                <li><%= link_to 'How It Works', '/howitworks/index' %></li>
+                <li><%= link_to 'Prices', '/prices/index' %></li>
+              </ul>
+            </li>
+            <li class="dropup">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="ts-label">Legal <i class="fa fa-sort"></i></span></a>
+              <ul class="dropdown-menu dropup dropup-menu" role="menu" aria-labelledby="dLabel">
+                <li><%= link_to 'Terms of Service', terms_path %></li>
+                <li><%= link_to 'Privacy Policy', privacy_path %></li>
+                <li><%= link_to 'Posting Terms of Use', postterm_path %></li>
+              </ul>
+            </li>
+            <li class="dropup">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="ts-label">Help <i class="fa fa-sort"></i></span></a>
+              <ul class="dropdown-menu dropup dropup-menu" role="menu" aria-labelledby="dLabel">
+                <li><%= link_to 'FAQs', faq_path %></li>
+                <li><%= link_to 'Safety Tips', safetytips_path %></li>
+              </ul>
+            </li>
+            <li class="li_no_bg">
+              <span class="ts-copy">© Connechub <%= Date.today.year %></span>
+            </li>
+          </ul>
         </div>
       </div>
     </nav>
