REMOVED old application.css

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -700,7 +700,7 @@ div.name > b > a {
 
 /* Override BS3 navbar style */
 .navbar {
-  margin-bottom: 0px;
+  margin-bottom: 0px !important;
 }
 
 /* Google Captcha inline element styling */
