--- a/app/assets/javascripts/serviceworker.js.erb
+++ b/app/assets/javascripts/serviceworker.js.erb
@@ -1,5 +1,4 @@
-var CACHE_VERSION = '<%= ENV['WEB_APP_VERSION'] %>';
-var CACHE_NAME = CACHE_VERSION + ':<%= ENV['NAME'] %>-cache';
+var CACHE_NAME = '<%= ENV['NAME'] %>:<%= ENV['WEB_APP_VERSION'] %>-cache';
 
 function onInstall(event) {
   console.log('[Serviceworker]', "Installing!", event);
@@ -33,7 +32,7 @@ function onActivate(event) {
           // Return true if you want to remove this cache,
           // but remember that caches are shared across
           // the whole origin
-          return cacheName.indexOf(CACHE_VERSION) !== 0;
+          return cacheName.indexOf(CACHE_NAME) !== 0;
         }).map(function(cacheName) {
           return caches.delete(cacheName);
         })
