ADDED TRIX RTE to listing new/edit forms.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -711,3 +711,9 @@ div.g-recaptcha > div {
     text-align: center;
   }
 }
+
+/* TRIC RTE for listing new/edit form */
+div.form-group.trix_editor.required.listing_description {
+  margin-right: 5px;
+  margin-left: 15px;
+}
