--- a/app/views/listings/edit.html.erb
+++ b/app/views/listings/edit.html.erb
@@ -136,9 +136,10 @@
 
                     <div class="input-group">
                         <div class="input-group-addon">Description</div>
-                        <%= f.text_area :description,
+                        <%= f.input :description,
                             as: :trix_editor,
                             class: "form-control",
+                            label: false,
                             required: true,
                             type: "text",
                             maxlength: "2048",
