--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -701,7 +701,7 @@ div.g-recaptcha > div {
 
 .nav > li > a {
   position: relative;
-  display: block;
+  display: inline-block;
   padding: 10px 5px;
 }
 
