--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -14,9 +14,9 @@
             <div class="panel-body">
                 <%= form_for(
                     resource,
-                    # as: resource_name,
-                    # url: registration_path(resource_name),
-                    url: '/users/update',
+                    as: resource_name,
+                    url: registration_path(resource_name),
+                    # url: '/users/edit',
                     html: {
                         method: :put,
                         multipart: true
