DISABLE all recaptcha logic.

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -55,7 +55,7 @@
                                                 %>
                                         </div>
                                     </div>
-                                    <%= recaptcha_tags %>
+                                    <%#= recaptcha_tags %>
                                     <div class="form-group">
                                         <%= f.submit "Sign up", class: "btn btn-lg btn-success btn-block" %>
                                     </div>
