ADDED password complexity and related changes.

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -57,7 +57,8 @@
 
                     <div class="small-heading", style="color:red">Optional: <br />
                     - The following two fields must match to change password. <br />
-                    - You will be prompted to log in with your new password after the change.
+                    - You will be prompted to log in with your new password after the change.<br />
+                    - Password should be 8-128 characters and include: 1 uppercase (A-Z), 1 lowercase (a-z), 1 digit (0-9) and 1 special character (~!@#$%^&*()_+`-=).
                     </div>
                     <br>
 
