--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -6,9 +6,13 @@
                     <h3 class="sign-h"><span id="sign-icon"><i class="fa fa-sign-in"></i></span>Sign Up!</h3>
                 </div>
                 <div class="panel-body">
-                    <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+                    <%= form_for(
+                        resource,
+                        as: resource_name,
+                        url: registration_path(resource_name)
+                    ) do |f| %>
                         <%= devise_error_messages! %>
-                        <% #= flash[:recaptcha_error] %>
+                        <%= flash[:recaptcha_error] %>
                         <fieldset>
                             <div class="row">
                                 <div class="col-sm-12 col-md-10  col-md-offset-1 ">
@@ -55,7 +59,7 @@
                                                 %>
                                         </div>
                                     </div>
-                                    <%#= recaptcha_tags %>
+                                    <%= recaptcha_tags %>
                                     <div class="form-group">
                                         <%= f.submit "Sign up", class: "btn btn-lg btn-success btn-block" %>
                                     </div>
