--- a/app/assets/javascripts/serviceworker.js.erb
+++ b/app/assets/javascripts/serviceworker.js.erb
@@ -6,8 +6,8 @@ function onInstall(event) {
   event.waitUntil(
     caches.open(CACHE_NAME).then(function prefill(cache) {
       return cache.addAll([
-        // make sure serviceworker.js is not required by application.js
-        // if you want to reference application.js from here
+        # make sure serviceworker.js is not required by application.js
+        # if you want to reference application.js from here
         '/offline',
         '<%= asset_path "application.css" %>',
         '<%= asset_path "bootstrap/glyphicons-halflings-regular.ttf?v=4.7.0" %>',
@@ -30,9 +30,9 @@ function onActivate(event) {
     caches.keys().then(function(cacheNames) {
       return Promise.all(
         cacheNames.filter(function(cacheName) {
-          // Return true if you want to remove this cache,
-          // but remember that caches are shared across
-          // the whole origin
+          # Return true if you want to remove this cache,
+          # but remember that caches are shared across
+          # the whole origin
           return cacheName.indexOf(CACHE_VERSION) !== 0;
         }).map(function(cacheName) {
           return caches.delete(cacheName);
@@ -45,26 +45,27 @@ function onActivate(event) {
 function onFetch(event) {
   console.log('[Serviceworker]', "Fetching!", event);
   event.respondWith(async function() {
-    // Try the cache
+    # Try the cache
     const cachedResponse = await caches.match(event.request);
     if (cachedResponse) return cachedResponse;
 
     try {
-      // Fall back to network
+      # Fall back to network
       return await fetch(event.request);
     } catch (err) {
-      // If both fail, show a generic fallback:
+      # If both fail, show a generic fallback:
       return caches.match('/offline');
-      // However, in reality you'd have many different
-      // fallbacks, depending on URL & headers.
-      // Eg, a fallback silhouette image for avatars.
+      # However, in reality you'd have many different
+      # fallbacks, depending on URL & headers.
+      # Eg, a fallback silhouette image for avatars.
     }
   }());
 }
 
 function cache(request, response) {
   if (response.type === "error" || response.type === "opaque") {
-    return Promise.resolve(); // do not put in cache network errors
+    # do not put in cache network errors
+    return Promise.resolve();
   }
 
   return caches
