Almost got all the UAt Functional tests working agian.

--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -77,7 +77,7 @@
                         <%= @listing.votes_for.size %>
                     <% end %>
                 <% else %>
-                    <a href="#" class="pull-right">
+                    <a class="pull-right">
                         <i class="fa fa-heart"></i>
                         <%= @listing.votes_for.size %>
                     </a>
