--- a/app/views/pages/newsletter.html.erb
+++ b/app/views/pages/newsletter.html.erb
@@ -45,7 +45,23 @@
         <p>1.1.12 "Flying Frog"</p>
         <ul>
             <li>Improved Security</li>
-            <li>Apple/Google/Samsung Pay option to pay for your ad.</li>
+        </ul>
+        
+        <p>1.1.13 "Eerie Eagle"</p>
+        <ul>
+            <li>ADDED Andriod and iOS progressive web app abilitiies including `Add to Homescreen`.</li>
+            <li>Enabled text compression to improve performance.</li>
+            <li>REMOVED un-used Javascript.</li>
+            <li>IMPROVED video transcoding quality.</li>
+        </ul>
+
+        <p>1.1.14 "Fuzzy Frog"</p>
+        <ul>
+            <li>IMPROVED password complexity requirements.</li>
+            <li>ADDED Google reCaptcha during signin.</li>
+            <li>ADDED ability to use rich text formatting, including URL links, in item description.</li>
+            <li>REMOVED hamburger menu from mobile view.</li>
+            <li>FIXED incorrect icons on main menu.</li>
         </ul>
 
     </div>
