Trying to get 1.1.14 to working...

--- a/app/views/pages/newsletter.html.erb
+++ b/app/views/pages/newsletter.html.erb
@@ -58,7 +58,7 @@
         <p>1.1.14 "Fuzzy Frog"</p>
         <ul>
             <li>IMPROVED password complexity requirements.</li>
-            <li>ADDED Google reCaptcha during signin.</li>
+            <li>ADDED Google reCaptcha during registration.</li>
             <li>ADDED ability to use rich text formatting, including URL links, in item description.</li>
             <li>REMOVED hamburger menu from mobile view.</li>
             <li>FIXED incorrect icons on main menu.</li>
