--- a/app/assets/javascripts/serviceworker.js.erb
+++ b/app/assets/javascripts/serviceworker.js.erb
@@ -2,12 +2,12 @@ var CACHE_VERSION = '<%= ENV['WEB_APP_VERSION'] %>';
 var CACHE_NAME = CACHE_VERSION + ':<%= ENV['NAME'] %>-cache';
 
 function onInstall(event) {
-  # console.log('[Serviceworker]', "Installing!", event);
+  // console.log('[Serviceworker]', "Installing!", event);
   event.waitUntil(
     caches.open(CACHE_NAME).then(function prefill(cache) {
       return cache.addAll([
-        # make sure serviceworker.js is not required by application.js
-        # if you want to reference application.js from here
+        // make sure serviceworker.js is not required by application.js
+        // if you want to reference application.js from here
         '/offline',
         '<%= asset_path "application.css" %>',
         '<%= asset_path "bootstrap/glyphicons-halflings-regular.ttf?v=4.7.0" %>',
@@ -25,14 +25,14 @@ function onInstall(event) {
 }
 
 function onActivate(event) {
-  # console.log('[Serviceworker]', "Activating!", eent);
+  // console.log('[Serviceworker]', "Activating!", eent);
   event.waitUntil(
     caches.keys().then(function(cacheNames) {
       return Promise.all(
         cacheNames.filter(function(cacheName) {
-          # Return true if you want to remove this cache,
-          # but remember that caches are shared across
-          # the whole origin
+          // Return true if you want to remove this cache,
+          // but remember that caches are shared across
+          // the whole origin
           return cacheName.indexOf(CACHE_VERSION) !== 0;
         }).map(function(cacheName) {
           return caches.delete(cacheName);
@@ -43,28 +43,28 @@ function onActivate(event) {
 }
 
 function onFetch(event) {
-  # console.log('[Serviceworker]', "Fetching!", event);
+  // console.log('[Serviceworker]', "Fetching!", event);
   event.respondWith(async function() {
-    # Try the cache
+    // Try the cache
     const cachedResponse = await caches.match(event.request);
     if (cachedResponse) return cachedResponse;
 
     try {
-      # Fall back to network
+      // Fall back to network
       return await fetch(event.request);
     } catch (err) {
-      # If both fail, show a generic fallback:
+      // If both fail, show a generic fallback:
       return caches.match('/offline');
-      # However, in reality you'd have many different
-      # fallbacks, depending on URL & headers.
-      # Eg, a fallback silhouette image for avatars.
+      // However, in reality you'd have many different
+      // fallbacks, depending on URL & headers.
+      // Eg, a fallback silhouette image for avatars.
     }
   }());
 }
 
 function cache(request, response) {
   if (response.type === "error" || response.type === "opaque") {
-    # do not put in cache network errors
+    // do not put in cache network errors
     return Promise.resolve();
   }
 
