INIT add of DropZone JS lib to handle multiple image uploads associated with Listings.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,6 +18,8 @@
  *= require 'masonry/infinitescroll'
  *= require 'masonry/right-to-left'
  *= require trix
+ *= require dropzone/basic
+ *= require dropzone/dropzone
 */
 
 @import "bootstrap-sprockets";
