--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,4 +1,19 @@
-<%= render :partial => "categories/partials/hero" %>
+<!-- Hero Area Start -->
+<div id="hero-area">
+    <div class="overlay"></div>
+    <div class="container">
+    <div class="row justify-content-center">
+        <div class="col-md-12 col-lg-9 col-xs-12 text-center">
+        <div class="contents-ctg">
+
+            <%= render "partials/hero_search_bar" %>
+
+        </div>
+        </div>
+    </div>
+    </div>
+</div>
+<!-- Hero Area End -->
 
 <%= render :partial => "categories/partials/top_category_list", locals: {categories: @categories} %>
 
