--- a/app/views/pages/newsletter.html.erb
+++ b/app/views/pages/newsletter.html.erb
@@ -1,5 +1,5 @@
 <!-- Page Header Start -->
-<div class="page-header" style="background: url(assets/img/coffeecup.jpg);"></div>
+<div class="page-header" style="background: url(/assets/img/coffeecup.jpg);"></div>
 
 <!-- Newsletter section Start --> 
 <section id="pricing-table" class="section-padding">
