--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,5 +1,5 @@
 <!-- Page Header Start -->
-<div class="page-header" style="background: url(assets/img/coffeecup.jpg);"></div>
+<div class="page-header" style="background: url(/assets/img/coffeecup.jpg);"></div>
 
 <!-- About Section Start -->
 <section id="about" class="section-padding">
