--- a/app/views/pages/faq.html.erb
+++ b/app/views/pages/faq.html.erb
@@ -1,5 +1,5 @@
 <!-- Page Header Start -->
-<div class="page-header" style="background: url(assets/img/coffeecup.jpg);"></div>
+<div class="page-header" style="background: url(/assets/img/coffeecup.jpg);"></div>
 
 <!-- FAQ Section Start -->
 <div class="faq section-padding">
