--- a/app/views/partials/_side_menu.erb
+++ b/app/views/partials/_side_menu.erb
@@ -1,33 +1,83 @@
-<div>
-  <h4>Categories</h4>
-
-  <div class="section group">
-
-    <% @categories.each do |category| %>
-      <div class="catg_title">
-        <i class="glyphicon glyphicon-<%= category.icon %>"></i>
-        <strong><%= link_to category.name, category_path(category.id) %></strong>
-      </div>
-
-      <% if (!@subcategory and category.id == params[:id].to_i) or (@subcategory and category.id == params[:category_id].to_i) %>
-      <div class="category_title sub_category_<%= category.id %>">
-          <ul>
-          <% category.subcategories.each do |subcategory| %>
-          <li class="landing_page">
-              <%= link_to subcategory.name, category_subcategory_path(category, subcategory) %>
-              <span class="cat_item_count">
-              <% count = subcategory.listing_count(category.id, subcategory.id) %>
-              <%= count > 0 ? count : '' %>
-              </span>
-          </li>
-          <% end %>
-          </ul>
-      </div>
-      <% end %>
-
-    <% end %>
-
-  </div>
-
+<div class="col-lg-3 col-md-12 col-xs-12 page-sidebar">
+  <aside>
+    <!-- Categories Widget -->
+    <div class="widget categories">
+      <h4 class="widget-title">All Categories</h4>
+      <ul class="categories-list">
+        <li>
+          <a href="#">
+            <i class="fas fa-car"></i>
+            Automotive <span class="category-counter"></span>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <i class="fas fa-heartbeat"></i>
+            Beauty and Health <span class="category-counter"></span>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <i class="fas fa-book-open"></i>
+            Books, Music, Toys <span class="category-counter"></span>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <i class="fas fa-tshirt"></i>
+            Clothing and Accessories <span class="category-counter"></span>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <i class="fas fa-laptop-house"></i>
+            Electronics <span class="category-counter"></span>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <i class="fas fa-couch"></i>
+            Home and Garden <span class="category-counter"></span>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <i class="fas fa-briefcase"></i>
+            Jobs <span class="category-counter"></span>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <i class="fas fa-paw"></i>
+            Pets <span class="category-counter"></span>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <i class="fas fa-sign"></i>
+            Real Estate <span class="category-counter"></span>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <i class="fas fa-tools"></i>
+            Services <span class="category-counter"></span>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <i class="fas fa-quidditch"></i>
+            Sports and Outdoors <span class="category-counter"></span>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <i class="fas fa-glass-cheers"></i>
+            Weddings and Parties <span class="category-counter"></span>
+          </a>
+        </li>
+      </ul>
+    </div>
+  </aside>
 </div>
-<br /><br /><br />
+
