--- a/app/views/partials/_side_menu.erb
+++ b/app/views/partials/_side_menu.erb
@@ -4,78 +4,38 @@
     <div class="widget categories">
       <h4 class="widget-title">All Categories</h4>
       <ul class="categories-list">
+    
+        <% @categories.each do |category| %>
         <li>
-          <a href="#">
-            <i class="fas fa-car"></i>
-            Automotive <span class="category-counter"></span>
-          </a>
+          <%= link_to category_path(category.id) do %>
+            <i class="fas fa-<%= category.icon %>"></i>
+            <%= category.name %>
+            <span class="category-counter">(
+              <% count = category.listing_count(category.id) %>
+              <%= count > 0 ? count : '' %>)
+            </span>
+          <% end %>
+
+          <% if (!@subcategory and category.id == params[:id].to_i) or (@subcategory and category.id == params[:category_id].to_i) %>
+          <ul>
+            <% category.subcategories.each do |subcategory| %>
+            <li>
+                <%= link_to category_path(category, subcategory) do %>
+                  <i class="fas fa-<%= category.icon %>"></i>
+                  <%= sub_category.name %>
+                <span class="cat_item_count">
+                  <% count = category.listing_count(category.id, subcategory.id) %>
+                  <%= count > 0 ? count : '' %>
+                </span>
+              <% end %>
+            </li>
+            <% end %>
+          </ul>
+          <% end %>
+
         </li>
-        <li>
-          <a href="#">
-            <i class="fas fa-heartbeat"></i>
-            Beauty and Health <span class="category-counter"></span>
-          </a>
-        </li>
-        <li>
-          <a href="#">
-            <i class="fas fa-book-open"></i>
-            Books, Music, Toys <span class="category-counter"></span>
-          </a>
-        </li>
-        <li>
-          <a href="#">
-            <i class="fas fa-tshirt"></i>
-            Clothing and Accessories <span class="category-counter"></span>
-          </a>
-        </li>
-        <li>
-          <a href="#">
-            <i class="fas fa-laptop-house"></i>
-            Electronics <span class="category-counter"></span>
-          </a>
-        </li>
-        <li>
-          <a href="#">
-            <i class="fas fa-couch"></i>
-            Home and Garden <span class="category-counter"></span>
-          </a>
-        </li>
-        <li>
-          <a href="#">
-            <i class="fas fa-briefcase"></i>
-            Jobs <span class="category-counter"></span>
-          </a>
-        </li>
-        <li>
-          <a href="#">
-            <i class="fas fa-paw"></i>
-            Pets <span class="category-counter"></span>
-          </a>
-        </li>
-        <li>
-          <a href="#">
-            <i class="fas fa-sign"></i>
-            Real Estate <span class="category-counter"></span>
-          </a>
-        </li>
-        <li>
-          <a href="#">
-            <i class="fas fa-tools"></i>
-            Services <span class="category-counter"></span>
-          </a>
-        </li>
-        <li>
-          <a href="#">
-            <i class="fas fa-quidditch"></i>
-            Sports and Outdoors <span class="category-counter"></span>
-          </a>
-        </li>
-        <li>
-          <a href="#">
-            <i class="fas fa-glass-cheers"></i>
-            Weddings and Parties <span class="category-counter"></span>
-          </a>
-        </li>
+        <% end %>
+
       </ul>
     </div>
   </aside>
